--- a/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page.html
@@ -107,7 +107,7 @@
 
                     {% if page.related_research_centres_schools %}
                         <div class="section__row">
-                            {% include "patterns/molecules/relatedcontent/relatedprogrammes.html" with related_sections=page.related_research_centres_schools title="Research centres & Schools" %}
+                            {% include "patterns/molecules/relatedcontent/relatedprogrammes.html" with related_sections=page.related_research_centres_schools title="Research centres & Schools" modifier="meta-new-line" %}
                         </div>
                     {% endif %}
 
