--- a/rca/static_src/sass/components/_profile-detail.scss
+++ b/rca/static_src/sass/components/_profile-detail.scss
@@ -44,7 +44,11 @@
 
     &__body {
         font-family: $font--primary;
-        margin-bottom: ($gutter / 4);
+        margin-bottom: ($gutter / 2);
+
+        @include media-query(medium) {
+            margin-bottom: ($gutter / 4);
+        }
     }
 
     .people-module--single & {
@@ -178,7 +182,7 @@
         }
 
         &:nth-of-type(n + 4) {
-            grid-column: auto / span 1;
+            grid-column: 1 / span 2;
         }
 
         &:nth-last-of-type(4) {
