Fix for programme detail

--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
@@ -61,10 +61,9 @@
 </section>
 
 <section class="section section--end bg bg--light">
-    
     {% if related_staff %}
         <div class="section__row section__row--first section__row--last">
-            {% include "patterns/organisms/people-module/people-module.html" with people=related_staff %}
+            {% include "patterns/organisms/people-module/people-module.html" with title="Staff" people=related_staff %}
         </div>
     {% endif %}
 
