--- a/rca/static_src/sass/components/_profile-detail.scss
+++ b/rca/static_src/sass/components/_profile-detail.scss
@@ -175,37 +175,17 @@
             }
         }
 
-        &:nth-of-type(3) {
+        &:nth-of-type(4) {
             @include media-query(large) {
-                grid-column: 1 / span 3;
+                grid-column: 2 / span 2;
             }
         }
 
-        &:nth-of-type(n + 4) {
+        &:nth-of-type(n + 5) {
             grid-column: 1 / span 2;
-        }
 
-        &:nth-last-of-type(4) {
             @include media-query(large) {
-                grid-column: 2;
-            }
-        }
-
-        &:nth-last-of-type(3) {
-            @include media-query(large) {
-                grid-column: 3;
-            }
-        }
-
-        &:nth-last-of-type(2) {
-            @include media-query(large) {
-                grid-column: 2;
-            }
-        }
-
-        &:nth-last-of-type(1) {
-            @include media-query(large) {
-                grid-column: 3;
+                grid-column: auto / span 1;
             }
         }
     }
