Updating link colour to orange 18px and removing item from five plus people comp

--- a/rca/static_src/sass/components/_profile-detail.scss
+++ b/rca/static_src/sass/components/_profile-detail.scss
@@ -139,7 +139,11 @@
         }
 
         &:nth-of-type(n + 3) {
-            margin-bottom: ($gutter * 1.5);
+            margin-bottom: $gutter;
+
+            @include media-query(large) {
+                margin-bottom: ($gutter * 1.5);
+            }
 
             #{$root}__container {
                 display: flex;
