--- a/rca/project_styleguide/templates/patterns/organisms/people-module/people-module.html
+++ b/rca/project_styleguide/templates/patterns/organisms/people-module/people-module.html
@@ -13,7 +13,7 @@
             </div>
             {% if page.staff_link %}
                 <div class="people-module__action">
-                    <a class="link link--secondary link--link body body--two" href="{{ page.staff_link }}">
+                    <a class="link link--primary link--link body body--one" href="{{ page.staff_link }}">
                         <span class="link__label">{{ page.staff_link_text }}</span>
                         <svg class="link__icon" width="12" height="8" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
                     </a>
