Builds out the remaining fields and models for shortcourses

--- a/rca/project_styleguide/templates/patterns/atoms/link-tertiary/link-tertiary--link.html
+++ b/rca/project_styleguide/templates/patterns/atoms/link-tertiary/link-tertiary--link.html
@@ -1,4 +1,4 @@
-<a href="{{ value.href }}" class="link link--tertiary link--link">
-    <span class="link__label">{{ value.text }}</span>
+<a href="{% firstof value.href value.url %}" class="link link--tertiary link--link">
+    <span class="link__label">{% firstof value.text value.title %}</span>
     <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
 </a>
