--- a/rca/project_styleguide/templates/patterns/molecules/streamfield/blocks/image_block.html
+++ b/rca/project_styleguide/templates/patterns/molecules/streamfield/blocks/image_block.html
@@ -1,4 +1,5 @@
 {% load wagtailimages_tags %}
 
-{% image value.image width-1000 %}
-<p>{{ value.caption }}</p>
+<div class="image image--full"> 
+    {% image value.image width-878 %}
+</div>
