--- a/rca/project_styleguide/templates/patterns/pages/guide/guide.html
+++ b/rca/project_styleguide/templates/patterns/pages/guide/guide.html
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="section__row section__row--first grid">
-                    <div class="streamfield">
+                    <div class="streamfield rich-text">
                         {% include "patterns/molecules/streamfield/stream_block.html" %}
                     </div>
                 </div>
