--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -14,6 +14,7 @@
 // Components
 @import 'components/accordion';
 @import 'components/accordion-block';
+@import 'components/anchor-heading';
 @import 'components/anchor-nav';
 @import 'components/anchor-nav-item';
 @import 'components/app';
