Hooking up anchor headings

--- a/rca/project_styleguide/templates/patterns/_pattern_library_only/streamfield/guide_streamfield.html
+++ b/rca/project_styleguide/templates/patterns/_pattern_library_only/streamfield/guide_streamfield.html
@@ -2,7 +2,7 @@
 {% include "patterns/molecules/streamfield/blocks/richtext_block.html" %}
 {% include "patterns/molecules/streamfield/blocks/image_block.html" %}
 {% include "patterns/molecules/streamfield/blocks/richtext_block.html" %}
-{% include "patterns/molecules/streamfield/blocks/anchor_heading_block.html" with title="Article 1" id="article-two" %}
+{% include "patterns/molecules/streamfield/blocks/anchor_heading_block.html" with title="Article 1" id="article-one" %}
 {% include "patterns/molecules/streamfield/blocks/richtext_block.html" %}
 {% include "patterns/molecules/streamfield/blocks/richtext_block.html" %}
 {% include "patterns/molecules/streamfield/blocks/anchor_heading_block.html" with title="Article 2" id="article-two" %}
