--- a/rca/project_styleguide/templates/patterns/pages/guide/guide.html
+++ b/rca/project_styleguide/templates/patterns/pages/guide/guide.html
@@ -32,7 +32,7 @@
 
             {% if page.introduction %}
                 <div class="introduction grid">
-                    {% include "patterns/molecules/anchor-nav/anchor-nav.html" %}
+                    {% include "patterns/molecules/anchor-nav/anchor-nav.html" with anchor_nav=page.anchor_nav %}
                     <div class="introduction__container">
                         <h2 class="introduction__text section__heading heading heading--five">
                             {{ page.introduction }}
