--- a/rca/static_src/sass/components/_anchor-heading.scss
+++ b/rca/static_src/sass/components/_anchor-heading.scss
@@ -6,6 +6,10 @@
     }
 
     &:first-child {
-        padding-top: 0;
+        padding-top: ($gutter * 1.5);
+
+        @include media-query(large) {
+            padding-top: ($gutter * 4);
+        }
     }
 }
