--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -10,6 +10,7 @@
 // Base
 @import 'base/base';
 @import 'base/typography';
+@import 'base/layout';
 
 // Components
 @import 'components/accordion';
