--- a/rca/project_styleguide/templates/patterns/pages/guide/guide.html
+++ b/rca/project_styleguide/templates/patterns/pages/guide/guide.html
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="section__row section__row--first grid">
-                    <div class="streamfield rich-text">
+                    <div class="streamfield rich-text layout__start-one-s layout__span-two-s layout__start-two-l layout__span-three--l">
                         {% include "patterns/molecules/streamfield/stream_block.html" %}
                     </div>
                 </div>
